hphp/hack/test/typecheck/final_class.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

<<__Sealed()>>
final class A {}
